--- a/thesis-work/seq_disj.tex
+++ b/thesis-work/seq_disj.tex
@@ -1,6 +1,6 @@
 \section{Sequential Point of View}
 \label{sec:seq_disj}
-
+\paragraph{Finding a player that can reduce the universe size.}
 Consider a process where we start with some universe $U$ (where $\bigcap_{i = 1}^k x_i \subseteq U$),
 and gradually intersect it with more and more players' inputs, 
 obtaining a sequence of sets
